Updated code and readme

--- a/LipNet_2d.ipynb
+++ b/LipNet_2d.ipynb
@@ -2186,16 +2186,8 @@
     }
    ],
    "source": [
-    "model.fit(train, validation_data=test, epochs=80, callbacks=[checkpoint_callback, schedule_callback, example_callback])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38c6f323",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Please skip this cell if you are not training the model\n",
+    "model.fit(train, validation_data=test, epochs=100, callbacks=[checkpoint_callback, schedule_callback, example_callback])\n",
     "model.save('models/2dcheckpoint.weights.h5')"
    ]
   },
@@ -2219,6 +2211,16 @@
    "outputs": [],
    "source": [
     "model.load_weights('models/2dcheckpoint.weights.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a36bf821",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=Adam(learning_rate=0.0001), loss=CTCLoss)"
    ]
   },
   {
