--- a/LipNet_3d_bilstm.ipynb
+++ b/LipNet_3d_bilstm.ipynb
@@ -1612,16 +1612,8 @@
    },
    "outputs": [],
    "source": [
-    "model.fit(train, validation_data=test, epochs=100, callbacks=[checkpoint_callback, schedule_callback, example_callback])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4aef73c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Please skip this cell if you are not training the model\n",
+    "model.fit(train, validation_data=test, epochs=100, callbacks=[checkpoint_callback, schedule_callback, example_callback])\n",
     "model.save('models/3dcheckpoint.weights.h5')"
    ]
   },
@@ -1656,6 +1648,16 @@
    ],
    "source": [
     "model.load_weights('model/3dcheckpoint.weights.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17075244",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=Adam(learning_rate=0.0001), loss=CTCLoss)"
    ]
   },
   {
