--- a/LipNet_3d_gru.ipynb
+++ b/LipNet_3d_gru.ipynb
@@ -2286,16 +2286,7 @@
     }
    ],
    "source": [
-    "model.fit(train, validation_data=test, epochs=68, callbacks=[checkpoint_callback, schedule_callback, example_callback])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e6a44fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model.fit(train, validation_data=test, epochs=100, callbacks=[checkpoint_callback, schedule_callback, example_callback])\n",
     "model.save('models/3dGRUcheckpoint.h5')"
    ]
   },
@@ -2318,7 +2309,17 @@
    },
    "outputs": [],
    "source": [
-    "model.load_weights('models\\3dGRUcheckpoint.h5')"
+    "model.load_weights('models/3dGRUcheckpoint.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1f8cc4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=Adam(learning_rate=0.0001), loss=CTCLoss)"
    ]
   },
   {
